[gd_scene load_steps=9 format=3 uid="uid://lusivra5d0pg"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_s07ps"]
[ext_resource type="Shader" path="res://Assets/pause_menu.gdshader" id="2_84jtn"]
[ext_resource type="Theme" uid="uid://1bs3lltnrfdo" path="res://Assets/custom1.tres" id="3_wg8hj"]
[ext_resource type="FontFile" uid="uid://j2y2lm8yox0l" path="res://Assets/the unseen.ttf" id="4_x5cq5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4ruyi"]
shader = ExtResource("2_84jtn")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_0jxja"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xejjn"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4yvrr"]
_data = {
"RESET": SubResource("Animation_0jxja"),
"blur": SubResource("Animation_xejjn")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s07ps")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_4ruyi")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.5
offset_top = -148.5
offset_right = 169.5
offset_bottom = 148.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_wg8hj")
theme_override_colors/font_color = Color(0.223529, 0.658824, 0.207843, 1)
theme_override_colors/font_outline_color = Color(0.054902, 0.207843, 0.0470588, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_x5cq5")
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_wg8hj")
theme_override_colors/font_color = Color(0.223529, 0.658824, 0.207843, 1)
theme_override_colors/font_outline_color = Color(0.054902, 0.207843, 0.0470588, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_x5cq5")
theme_override_font_sizes/font_size = 30
text = "Restart"

[node name="Options" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_wg8hj")
theme_override_colors/font_color = Color(0.223529, 0.658824, 0.207843, 1)
theme_override_colors/font_outline_color = Color(0.054902, 0.207843, 0.0470588, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_x5cq5")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="QuitToMenu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_wg8hj")
theme_override_colors/font_color = Color(0.223529, 0.658824, 0.207843, 1)
theme_override_colors/font_outline_color = Color(0.054902, 0.207843, 0.0470588, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_x5cq5")
theme_override_font_sizes/font_size = 30
text = "Quit To Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4yvrr")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
